--- a/portfolio.html
+++ b/portfolio.html
@@ -20,34 +20,33 @@
   <body>
     <!--Header-->
     <header class="head">
-      <a class="link logo" href="./index.html"
-        >Web<span class="second-logo">Studio</span>
-      </a>
-      <nav class="nav-link-item">
-        <ul class="list">
-          <li><a class="nav-link link" href="">Студия</a></li>
-          <li>
-            <a class="nav-link link" href="./portfolio.html">Портфолио</a>
-          </li>
-          <li><a class="nav-link link" href="">Контакты</a></li>
-        </ul>
-      </nav>
-
-      <ul class="list">
-        <li>
-          <a class="mail link" href="mailto:info@devstudio.com"
-            >info@devstudio.com</a
-          >
-        </li>
-        <li>
-          <a class="tel link" href="tel:+380961111111">+38 096 111 11 11</a>
-        </li>
-      </ul>
+      <div class="container page-header-container">
+        <nav class="nav-link-item">
+          <a class="link logo" href="./index.html"
+            >Web<span class="second-logo">Studio</span>
+          </a>
+          <ul class="list list-links">
+            <li class="link-item">
+              <a class="nav-link link" href="">Студия</a>
+            </li>
+            <li class="link-item">
+              <a class="nav-link link" href="./portfolio.html">Портфолио</a>
+            </li>
+            <li class="link-item">
+              <a class="nav-link link" href="">Контакты</a>
+            </li>
+          </ul>
+        </nav>
+        <a class="mail link" href="mailto:info@devstudio.com"
+          >info@devstudio.com</a
+        >
+        <a class="tel link" href="tel:+380961111111">+38 096 111 11 11</a>
+      </div>
     </header>
     <!-- main content-->
     <main>
       <section>
-        <h1 hidden>Фильтр</h1>
+        <h1 class="visually-hidden">Фильтр</h1>
         <ul class="list">
           <li><button class="button" type="button">Все</button></li>
           <li><button class="button" type="button">Веб-сайты</button></li>
