--- a/index.html
+++ b/index.html
@@ -44,13 +44,14 @@
     </header>
     <!--Main content-->
     <main>
-     <section class="hero section">
+      <!--Hero Section-->
+     <section class="hero">
        <div class="container">
           <h1 class="hero-title">
             Эффективные решения <br />
             для вашего бизнеса
           </h1>
-        <div class="hero-btn"><button class="hero-button" type="button">Заказать услугу</button></div>
+        <button class="hero-button" type="button">Заказать услугу</button>
         </div>
         </section>
 
@@ -93,7 +94,7 @@
       <section class="section">
         <div class="container">
         <h2 class="work-title">Чем мы занимаемся</h2>
-        <ul class="list">
+        <ul class="list work-list">
           <li>
             <img
               src="./images/img1.jpg"
@@ -123,42 +124,54 @@
       <section class="our-team section">
         <div class="container">
         <h2 class="team-title">Наша команда</h2>
-        <ul class="list">
-          <li>
+        <ul class="list team-list">
+          <li class="team-card">
             <img
               src="./images/photo1.jpg"
               alt="фото игорь демьяненко"
               width="270"
             />
-            <h3 class="name">Игорь Демьяненко</h3>
-            <p class="job-title">Product Designer</p>
+            <div class="name-jobtitle-container">
+              <h3 class="name">Игорь Демьяненко</h3>
+            <p class="job-title">Product Designer</p> 
+
+            </div> 
           </li>
-          <li>
+          <li class="team-card">
             <img
               src="./images/photo2.jpg"
               alt="фото ольга репина"
               width="270"
             />
-            <h3 class="name">Ольга Репина</h3>
+            <div class="name-jobtitle-container">
+              <h3 class="name">Ольга Репина</h3>
             <p class="job-title">Frontend Developer</p>
+
+            </div> 
           </li>
-          <li>
+          <li class="team-card">
             <img
               src="./images/photo3.jpg"
               alt="фото николай тарасов"
               width="270"
             />
-            <h3 class="name">Николай Тарасов</h3>
+            <div class="name-jobtitle-container">
+              <h3 class="name">Николай Тарасов</h3>
             <p class="job-title">Marketing</p>
+
+            </div> 
           </li>
-          <li>
+          <li class="team-card">
             <img
               src="./images/photo4.jpg"
               alt="фото михаил ермаков"
               width="270"
             />
-            <h3 class="name">Михаил Ермаков</h3>
+            <div class="name-jobtitle-container">
+              <h3 class="name">Михаил Ермаков</h3>
             <p class="job-title">UI Designer</p>
+
+            </div> 
           </li>
         </ul>
         </div>
@@ -167,13 +180,13 @@
     </main>
     <!--Footer-->
     <footer class="footer">
-      <div class="container">
-      <a class="link logo" href="./index.html"
+      <div class="container footer-container">
+      <a class="link logo footer-link-logo" href="./index.html"
         >Web<span class="footer-logo">Studio</span>
       </a>
-      <address>
+        <address class="adress-container">
         <ul class="adress-list list">
-          <li>
+          <li class="list-links-footer">
             <a
               class="link adress-link nav-link"
               href="https://goo.gl/maps/aopTPPwmk2LdjYj96"
@@ -182,12 +195,12 @@
               >г. Киев, пр-т Леси Украинки, 26</a
             >
           </li>
-          <li>
+          <li class="list-links-footer">
             <a class="link mail-link" href="mailto:info@example.com"
               >info@example.com</a
             >
           </li>
-          <li>
+          <li class="list-links-footer">
             <a class="link tel-link" href="tel:+380991111111"
               >+38 099 111 11 11</a
             >
