--- a/portfolio.html
+++ b/portfolio.html
@@ -45,17 +45,29 @@
     </header>
     <!-- main content-->
     <main>
-      <section>
+      <section class="section">
         <h1 class="visually-hidden">Фильтр</h1>
-        <ul class="list">
-          <li><button class="button" type="button">Все</button></li>
-          <li><button class="button" type="button">Веб-сайты</button></li>
-          <li><button class="button" type="button">Приложения</button></li>
-          <li><button class="button" type="button">Дизайн</button></li>
-          <li><button class="button" type="button">Маркетинг</button></li>
+        <ul class="list filtr-list-item">
+          <li class="filtr-list-button">
+            <button class="button filtr-button" type="button">Все</button>
+          </li>
+          <li class="filtr-list-button">
+            <button class="button filtr-button" type="button">Веб-сайты</button>
+          </li>
+          <li class="filtr-list-button">
+            <button class="button filtr-button" type="button">
+              Приложения
+            </button>
+          </li>
+          <li class="filtr-list-button">
+            <button class="button filtr-button" type="button">Дизайн</button>
+          </li>
+          <li class="filtr-list-button">
+            <button class="button filtr-button" type="button">Маркетинг</button>
+          </li>
         </ul>
         <!--our projects-->
-        <section>
+        <section class="section">
           <ul class="list">
             <li>
               <img src="./images/imgproj1.jpg" alt="ноутбук" width="370" />
@@ -120,32 +132,34 @@
     </main>
     <!-- footer-->
     <footer class="footer">
-      <a class="link logo" href="./index.html"
-        >Web<span class="footer-logo">Studio</span>
-      </a>
-      <address>
-        <ul class="adress-list list">
-          <li>
-            <a
-              class="link adress-link nav-link"
-              href="https://goo.gl/maps/aopTPPwmk2LdjYj96"
-              target="_blank"
-              rel="noreferrer noopener"
-              >г. Киев, пр-т Леси Украинки, 26</a
-            >
-          </li>
-          <li>
-            <a class="link mail-link" href="mailto:info@example.com"
-              >info@example.com</a
-            >
-          </li>
-          <li>
-            <a class="link tel-link" href="tel:+380991111111"
-              >+38 099 111 11 11</a
-            >
-          </li>
-        </ul>
-      </address>
+      <div class="container footer-container">
+        <a class="link logo footer-link-logo" href="./index.html"
+          >Web<span class="footer-logo">Studio</span>
+        </a>
+        <address class="adress-container">
+          <ul class="adress-list list">
+            <li class="list-links-footer">
+              <a
+                class="link adress-link nav-link"
+                href="https://goo.gl/maps/aopTPPwmk2LdjYj96"
+                target="_blank"
+                rel="noreferrer noopener"
+                >г. Киев, пр-т Леси Украинки, 26</a
+              >
+            </li>
+            <li class="list-links-footer">
+              <a class="link mail-link" href="mailto:info@example.com"
+                >info@example.com</a
+              >
+            </li>
+            <li class="list-links-footer">
+              <a class="link tel-link" href="tel:+380991111111"
+                >+38 099 111 11 11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
