--- a/portfolio.html
+++ b/portfolio.html
@@ -46,88 +46,111 @@
     <!-- main content-->
     <main>
       <section class="section">
-        <h1 class="visually-hidden">Фильтр</h1>
-        <ul class="list filtr-list-item">
-          <li class="filtr-list-button">
-            <button class="button filtr-button" type="button">Все</button>
-          </li>
-          <li class="filtr-list-button">
-            <button class="button filtr-button" type="button">Веб-сайты</button>
-          </li>
-          <li class="filtr-list-button">
-            <button class="button filtr-button" type="button">
-              Приложения
-            </button>
-          </li>
-          <li class="filtr-list-button">
-            <button class="button filtr-button" type="button">Дизайн</button>
-          </li>
-          <li class="filtr-list-button">
-            <button class="button filtr-button" type="button">Маркетинг</button>
-          </li>
-        </ul>
-        <!--our projects-->
-        <section class="section">
-          <ul class="list">
-            <li>
-              <img src="./images/imgproj1.jpg" alt="ноутбук" width="370" />
-              <h2 class="project-item">Технокряк</h2>
-              <p class="project-text">Веб-сайт</p>
+        <div class="container">
+          <h1 class="visually-hidden">Фильтр</h1>
+          <ul class="list filtr-list-item">
+            <li class="filtr-list-button">
+              <button class="button filtr-button" type="button">Все</button>
             </li>
-            <li>
+            <li class="filtr-list-button">
+              <button class="button filtr-button" type="button">
+                Веб-сайты
+              </button>
+            </li>
+            <li class="filtr-list-button">
+              <button class="button filtr-button" type="button">
+                Приложения
+              </button>
+            </li>
+            <li class="filtr-list-button">
+              <button class="button filtr-button" type="button">Дизайн</button>
+            </li>
+            <li class="filtr-list-button">
+              <button class="button filtr-button" type="button">
+                Маркетинг
+              </button>
+            </li>
+          </ul>
+
+          <!-- OUR PROJECTS LIST-->
+          <ul class="list projects-list">
+            <li class="project-card">
+              <img src="./images/imgproj1.jpg" alt="ноутбук" width="370" />
+              <div class="projects-name">
+                <h2 class="project-item">Технокряк</h2>
+                <p class="project-text">Веб-сайт</p>
+              </div>
+            </li>
+            <li class="project-card">
               <img
                 src="./images/imgproj2.jpg"
                 alt="2 баскетболиста"
                 width="370"
               />
-              <h2 class="project-item">Постер New Orlean vs Golden Star</h2>
-              <p class="project-text">Дизайн</p>
+              <div class="projects-name">
+                <h2 class="project-item">Постер New Orlean vs Golden Star</h2>
+                <p class="project-text">Дизайн</p>
+              </div>
             </li>
-            <li>
+            <li class="project-card">
               <img
                 src="./images/imgproj3.jpg"
                 alt="логотип ресторана"
                 width="370"
               />
-              <h2 class="project-item">Ресторан Seafood</h2>
-              <p class="project-text">Приложение</p>
+              <div class="projects-name">
+                <h2 class="project-item">Ресторан Seafood</h2>
+                <p class="project-text">Приложение</p>
+              </div>
             </li>
-            <li>
+            <li class="project-card">
               <img src="./images/imgproj4.jpg" alt="наушники" width="370" />
-              <h2 class="project-item">Проект Prime</h2>
-              <p class="project-text">Маркетинг</p>
+              <div class="projects-name">
+                <h2 class="project-item">Проект Prime</h2>
+                <p class="project-text">Маркетинг</p>
+              </div>
             </li>
-            <li>
+            <li class="project-card">
               <img src="./images/imgproj5.jpg" alt="коробки" width="370" />
-              <h2 class="project-item">Проект Boxes</h2>
-              <p class="project-text">Приложение</p>
+              <div class="projects-name">
+                <h2 class="project-item">Проект Boxes</h2>
+                <p class="project-text">Приложение</p>
+              </div>
             </li>
-            <li>
+            <li class="project-card">
               <img src="./images/imgproj6.jpg" alt="моноблок" width="370" />
-              <h2 class="project-item">Inspiration has no Borders</h2>
-              <p class="project-text">Веб-сайт</p>
+              <div class="projects-name">
+                <h2 class="project-item">Inspiration has no Borders</h2>
+                <p class="project-text">Веб-сайт</p>
+              </div>
             </li>
-            <li>
+            <li class="project-card">
               <img src="./images/imgproj7.jpg" alt="книга" width="370" />
-              <h2 class="project-item">Издание Limited Edition</h2>
-              <p class="project-text">Дизайн</p>
+              <div class="projects-name">
+                <h2 class="project-item">Издание Limited Edition</h2>
+                <p class="project-text">Дизайн</p>
+              </div>
             </li>
-            <li>
+            <li class="project-card">
               <img src="./images/imgproj8.jpg" alt="лейба" width="370" />
-              <h2 class="project-item">Проект LAB</h2>
-              <p class="project-text">Маркетинг</p>
+              <div class="projects-name">
+                <h2 class="project-item">Проект LAB</h2>
+                <p class="p roject-text">Маркетинг</p>
+              </div>
             </li>
-            <li>
+            <li class="project-card">
               <img
                 src="./images/imgproj9.jpg"
                 alt="рабочий ноутбук"
                 width="370"
               />
-              <h2 class="project-item">Growing Business</h2>
-              <p class="project-text">Приложение</p>
+              <div class="projects-name">
+                <h2 class="project-item">Growing Business</h2>
+                <p class="project-text">Приложение</p>
+              </div>
             </li>
           </ul>
-        </section>
+        </div>
       </section>
     </main>
     <!-- footer-->
