--- a/index.html
+++ b/index.html
@@ -37,9 +37,12 @@
             </li>
           </ul>
         </nav>
-        <a class="mail link" href="mailto:info@devstudio.com"
-          >info@devstudio.com</a>
-        <a class="tel link" href="tel:+380961111111">+38 096 111 11 11</a>
+        <ul class="list list-contacts-header" >
+          <li><a class="mail link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a class="tel link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+        </ul>
+        
+        
       </div>
     </header>
     <!--Main content-->
@@ -57,6 +60,7 @@
 
       <!--Skills-->
       <section class="section">
+        <h2 class="visually-hidden">Our Features</h2>
           <div class="container">
           <ul class="list list-skills">
             <li class="skills-list">
@@ -91,7 +95,7 @@
         </section>
       </div>
       <!-- Skills images-->
-      <section class="section">
+      <section class="section skills-section">
         <div class="container">
         <h2 class="work-title">Чем мы занимаемся</h2>
         <ul class="list work-list">
