--- a/portfolio.html
+++ b/portfolio.html
@@ -37,10 +37,16 @@
             </li>
           </ul>
         </nav>
-        <a class="mail link" href="mailto:info@devstudio.com"
-          >info@devstudio.com</a
-        >
-        <a class="tel link" href="tel:+380961111111">+38 096 111 11 11</a>
+        <ul class="list list-contacts-header">
+          <li>
+            <a class="mail link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a class="tel link" href="tel:+380961111111">+38 096 111 11 11</a>
+          </li>
+        </ul>
       </div>
     </header>
     <!-- main content-->
