--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           </ul>
         </nav>
         <ul class="list list-contacts-header">
-          <li>
+          <li class="contacts">
             <a class="mail link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
